--- a/.github/workflows/flw-action.yml
+++ b/.github/workflows/flw-action.yml
@@ -23,9 +23,11 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - uses: ./
+      - name: Execution migrations
+        uses: ./
         with:
           url: jdbc:mysql://db4free.net:3306/banco73tes_db
           user: jainaso73
