--- a/.github/workflows/flw-action-reusable.yml
+++ b/.github/workflows/flw-action-reusable.yml
@@ -17,7 +17,7 @@ jobs:
   # This workflow contains a single job called "build"
   call-workflow:
     uses: jairosousa/reusable-migration-flow/.github/workflows/build&Deploy-migrations.yml@main
-    with:
-      url: jdbc:mysql://db4free.net:3306/banco73tes_db
-      username: jainaso73
-      password: admin123
+    secrets: 
+      url: ${{secrets.URL}}
+      username: ${{secrets.USERNAME}}
+      password: ${{secrets.PASSWORD}}
